# pseudo-parser

./: LICENSE  README.md  setup.cfg
.github/workflows/: ci.yml
pseudo_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_upf.py
