[metadata]
name = pseudo_parser
version = 22.3.0a0
description = Package for the parse pseudopotential of any type
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unkcpz/pseudo-parser
author = Jusong Yu
author_email = jusong.yu@epfl.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
install_requires =
    click==8.0.3
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    bumpver==2021.1114
    pre-commit==2.11.1

tests =
    pytest==7.1.1

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.

[bumpver]
current_version = "v22.03.0a0"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiida_sssp_workflow/version.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
